# Auto-OCR

./: .env.example  .flake8  .gitignore  DEPLOY.md  Dockerfile  Makefile  PRD_IMPLEMENTATION_ANALYSIS.md  README.md  auto-ocr.yaml  claude.md  docker-compose.dev.yml  docker-compose.yml  mypy.ini  prd.md  pyproject.toml  pytest.ini  requirements.txt  security-report.json  tasklist.md  test_summary.txt
.claude/: settings.local.json
.github/: SECRETS.md
.github/workflows/: ci-cd.yml  code-quality.yml  dependency-update.yml  deploy-main.yml  deploy.yml  docker-build.yml
backend/: dependencies.py  main.py
backend/api/: download.py  frontend.py  processing.py  upload.py
backend/core/: file_generator.py  image_processor.py  ocr_engine.py  pdf_converter.py  tasks.py  text_corrector.py
backend/utils/: temp_storage.py
config/: init.sql  nginx.conf  prometheus.yml  redis.conf
config/nginx/: default.conf
deploy/autoscaling/: cluster-autoscaler.yaml  hpa.yaml
deploy/aws/: cloudformation.yaml  ecs-task-definition.json
deploy/azure/: aks-deployment.yaml
deploy/gcp/: gke-deployment.yaml
deploy/load-balancer/: cert-manager.yaml  k-ocr-ingress.yaml  nginx-ingress.yaml
deploy/monitoring/: alertmanager.yaml  grafana.yaml  jaeger.yaml  logging.yaml  prometheus.yaml
deploy/tests/: README.md  ci-cd-pipeline-test.py  local-docker-test.py  production-deployment-test.py  staging-deployment-test.py
docs/: quality-assurance-report.md
docs/developer/: api-documentation.md  architecture.md  (+2 more)
scripts/: download_models.py  health_check.py
test_temp/: metadata.json
(+53 files in other folders)
